Details
-
Bug
-
Status: Closed (View Workflow)
-
Critical
-
Resolution: Fixed
-
N/A
-
Not for Release Notes
Description
SELECT XXH32(REGEXP_REPLACE('a','a','')); |
Leads to, on debug builds (inc ones with the MDEV-39661 patch) to:
|
MDEV-39661 CS 13.1.0 02e1853c894906737fe0ea5f836adb087b1a72ad (Debug, Clang 22.1.6-20260529) Build 15/06/2026 |
mariadbd: /test/13.0_dbg/strings/ctype-uca.inl:656: void my_uca_hash_sort_utf8mb4(my_hasher_st *, CHARSET_INFO *, const uchar *, size_t): Assertion `s' failed.
|
|
MDEV-39661 CS 13.1.0 02e1853c894906737fe0ea5f836adb087b1a72ad (Debug, Clang 22.1.6-20260529) Build 15/06/2026 |
Core was generated by `/test/MDEV-39661_MD150626-mariadb-13.1.0-linux-x86_64-dbg/bin/mariadbd --no-def'.
|
Program terminated with signal SIGABRT, Aborted.
|
#0 __pthread_kill_implementation (no_tid=0, signo=6, threadid=<optimized out>)at ./nptl/pthread_kill.c:44
|
 |
[Current thread is 1 (LWP 1304068)]
|
(gdb) bt
|
#0 __pthread_kill_implementation (no_tid=0, signo=6, threadid=<optimized out>)at ./nptl/pthread_kill.c:44
|
#1 __pthread_kill_internal (signo=6, threadid=<optimized out>)at ./nptl/pthread_kill.c:78
|
#2 __GI___pthread_kill (threadid=<optimized out>, signo=signo@entry=6)at ./nptl/pthread_kill.c:89
|
#3 0x0000789d5784526e in __GI_raise (sig=sig@entry=6)at ../sysdeps/posix/raise.c:26
|
#4 0x0000789d578288ff in __GI_abort () at ./stdlib/abort.c:79
|
#5 0x0000789d5782881b in __assert_fail_base (fmt=0x789d579d01e8 "%s%s%s:%u: %s%sAssertion `%s' failed.\n%n", assertion=assertion@entry=0x56a79ee8e86f "s", file=file@entry=0x56a79efca4b9 "/test/13.0_dbg/strings/ctype-uca.inl", line=line@entry=656, function=function@entry=0x56a79eee1894 "void my_uca_hash_sort_utf8mb4(my_hasher_st *, CHARSET_INFO *, const uchar *, size_t)") at ./assert/assert.c:94
|
#6 0x0000789d5783b507 in __assert_fail (assertion=0x56a79ee8e86f "s", file=0x56a79efca4b9 "/test/13.0_dbg/strings/ctype-uca.inl", line=656, function=0x56a79eee1894 "void my_uca_hash_sort_utf8mb4(my_hasher_st *, CHARSET_INFO *, const uchar *, size_t)") at ./assert/assert.c:103
|
#7 0x000056a7a0651a00 in my_uca_hash_sort_utf8mb4 (hasher=0x789d549280b0, cs=0x56a7a31ef568, s=0x0, slen=0)at /test/13.0_dbg/strings/ctype-uca.inl:656
|
#8 0x000056a79f7a8779 in Hasher::add (this=0x789d549280b0, cs=0x56a7a31ef568, str=0x0, length=0) at /test/13.0_dbg/sql/sql_type.h:236
|
#9 0x000056a79f7aca8d in Hasher::add (this=0x789d549280b0, cs=0x56a7a31ef568, str=0x0, length=0) at /test/13.0_dbg/sql/sql_type.h:240
|
#10 0x000056a79f7bdc78 in Item::hash_val_str (this=0x709c1401ac20, hasher=0x789d549280b0, buffer=0x709c1401af00)at /test/13.0_dbg/sql/item.cc:1167
|
#11 0x000056a79f83e0bc in Item_func_xxh32::val_int (this=0x709c1401ae40)at /test/13.0_dbg/sql/item_strfunc.cc:4608
|
#12 0x000056a79fef61d5 in Type_handler::Item_send_long (this=0x56a7a0d208c8 <type_handler_ulong>, item=0x709c1401ae40, protocol=0x709c14001440, buf=0x789d54928240)at /test/13.0_dbg/sql/sql_type.cc:7698
|
#13 0x000056a79ff0713d in Type_handler_long::Item_send (this=0x56a7a0d208c8 <type_handler_ulong>, item=0x709c1401ae40, protocol=0x709c14001440, buf=0x789d54928240)at /test/13.0_dbg/sql/sql_type.h:6033
|
#14 0x000056a79f715b6d in Item::send (this=0x709c1401ae40, protocol=0x709c14001440, buffer=0x789d54928240)at /test/13.0_dbg/sql/item.h:1239
|
#15 0x000056a79f9d3c9c in Protocol::send_result_set_row (this=0x709c14001440, row_items=0x709c1401a728) at /test/13.0_dbg/sql/protocol.cc:1358
|
#16 0x000056a79fa9fdce in select_send::send_data (this=0x709c1401b8d0, items=@0x709c1401a728: {<base_list> = {<Sql_alloc> = {<No data fields>}, first = 0x709c1401af20, last = 0x709c1401af20, elements = 1}, <No data fields>})at /test/13.0_dbg/sql/sql_class.cc:3411
|
#17 0x000056a79fa9fabf in select_result_sink::send_data_with_check (this=0x709c1401b8d0, items=@0x709c1401a728: {<base_list> = {<Sql_alloc> = {<No data fields>}, first = 0x709c1401af20, last = 0x709c1401af20, elements = 1}, <No data fields>}, u=0x709c14005280, sent=0) at /test/13.0_dbg/sql/sql_class.cc:3309
|
#18 0x000056a79fc6d812 in JOIN::exec_inner (this=0x709c1401b900)at /test/13.0_dbg/sql/sql_select.cc:4996
|
#19 0x000056a79fc6d2b3 in JOIN::exec (this=0x709c1401b900)at /test/13.0_dbg/sql/sql_select.cc:4913
|
#20 0x000056a79fc4b3db in mysql_select (thd=0x709c14000d60, tables=0x0, fields=@0x709c1401a728: {<base_list> = {<Sql_alloc> = {<No data fields>}, first = 0x709c1401af20, last = 0x709c1401af20, elements = 1}, <No data fields>}, conds=0x0, og_num=0, order=0x0, group=0x0, having=0x0, proc_param=0x0, select_options=2164525824, result=0x709c1401b8d0, unit=0x709c14005280, select_lex=0x709c1401a470) at /test/13.0_dbg/sql/sql_select.cc:5439
|
#21 0x000056a79fc4af3d in handle_select (thd=0x709c14000d60, lex=0x709c140051a0, result=0x709c1401b8d0, setup_tables_done_option=0)at /test/13.0_dbg/sql/sql_select.cc:636
|
#22 0x000056a79fbf2076 in execute_sqlcom_select (thd=0x709c14000d60, all_tables=0x0) at /test/13.0_dbg/sql/sql_parse.cc:6217
|
#23 0x000056a79fbe84a8 in mysql_execute_command (thd=0x709c14000d60, is_called_from_prepared_stmt=false) at /test/13.0_dbg/sql/sql_parse.cc:3991
|
#24 0x000056a79fbe1298 in mysql_parse (thd=0x709c14000d60, rawbuf=0x709c1401a3c0 "SELECT XXH32(REGEXP_REPLACE('a','a',''))", length=40, parser_state=0x789d5492a9f0)at /test/13.0_dbg/sql/sql_parse.cc:7945
|
#25 0x000056a79fbde9ee in dispatch_command (command=COM_QUERY, thd=0x709c14000d60, packet=0x709c1400b5f1 "", packet_length=40, blocking=true) at /test/13.0_dbg/sql/sql_parse.cc:1903
|
#26 0x000056a79fbe1d1a in do_command (thd=0x709c14000d60, blocking=true)at /test/13.0_dbg/sql/sql_parse.cc:1437
|
#27 0x000056a79fde690e in do_handle_one_connection (connect=0x56a7a37f6730, put_in_cache=true) at /test/13.0_dbg/sql/sql_connect.cc:1503
|
#28 0x000056a79fde66f1 in handle_one_connection (arg=0x56a7a38f1f10)at /test/13.0_dbg/sql/sql_connect.cc:1415
|
#29 0x0000789d5789ca94 in start_thread (arg=<optimized out>)at ./nptl/pthread_create.c:447
|
#30 0x0000789d57929c3c in clone3 ()at ../sysdeps/unix/sysv/linux/x86_64/clone3.S:78
|
Attachments
Issue Links
- is caused by
-
MDEV-38180 Add XXH hash function
-
- Closed
-