MDEV-40043 Assertion in my_uca_hash_sort_utf8mb4 on SELECT XXH32(REGEXP_REPLACE...)

Some expressions are 0 length and appending nothing to a hash
is a no-op.